# bmw-diagnostic-tool

./: .gitignore  README.md
app/: INSTRUCCIONES.txt  README.md  eslint.config.js  install-debian.sh  package-lock.json  package.json  vite.config.ts  vitest.config.ts
app/src/: App.tsx  index.css
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/src/: bmw.rs  bmw_commands.rs  commands.rs  constants.rs  database.rs  db_commands.rs  dcan.rs  integration_tests.rs  kline.rs  lib.rs  main.rs  pid_commands.rs  serial.rs  validators.rs
app/src/components/connection/: EcuSelector.tsx  PortSelector.tsx
app/src/components/dpf/: DPFPanel.tsx
app/src/components/dtc/: AIInterpretation.tsx  DTCList.tsx  DiagnosticsPanel.tsx
app/src/components/ecu/: DSCPanel.tsx  EGSPanel.tsx  FRMPanel.tsx  KOMBIPanel.tsx  index.ts
app/src/components/history/: HistoryPanel.tsx
app/src/components/live-data/: Gauge.tsx  LiveChart.tsx  LiveDataPanel.tsx
app/src/components/settings/: BackupRestore.tsx  index.ts
app/src/components/ui/: alert.test.tsx  alert.tsx  badge.tsx  button.test.tsx  button.tsx  card.tsx  empty-state.tsx  index.ts  led-indicator.tsx  modal.tsx  progress.tsx  select.tsx  skeleton.tsx  tabs.tsx  toast.tsx  tooltip.tsx
app/src/components/vehicles/: VehicleManager.tsx  index.ts
app/src/hooks/: useAI.ts  useAsyncOperation.ts  useBMW.ts  useDPF.ts  useDSC.ts  useDatabase.test.ts  useDatabase.ts  useDtcReader.ts  useEGS.ts  useFRM.ts  useInvokeWithTimeout.ts  useKOMBI.ts  useLiveData.ts  useSerial.ts  useWebSocket.ts
app/src/lib/: utils.test.ts
app/src/test/: integration.test.ts  mocks.ts  setup.ts
daemon-ftdi/: Cargo.toml  build-windows.md  build.rs
daemon-ftdi/src/: ftdi.rs  kline.rs  kwp2000.rs  main.rs  websocket.rs
releases/: BMW Diag-0.1.0-1.x86_64.rpm  BMW Diag_0.1.0_amd64.deb
scripts/: README.md
server/: .env.example  Dockerfile  bmw-diag-api.service  package-lock.json  package.json
server/src/: index.ts
server/src/controllers/: dtcController.ts
server/src/data/: dtc-codes-bmw.json  dtc-codes-generic.json
server/src/middleware/: validation.ts
server/src/routes/: dtcRoutes.ts  historyRoutes.ts
server/src/services/: alertService.ts  historyService.ts  openaiService.ts
usb-files/: INSTALAR.sh  LEEME.txt  install-bmw-diag.sh  uninstall-bmw-diag.sh
www/: dashboard.html  diagnostico-daemon.html  diagnostico-v2.html  diagnostico.html  index.html
www/js/: serial-worker.js
