[package]
name = "bmw-diag-daemon"
version = "1.0.0"
edition = "2021"
authors = ["BMW Diagnostic Tool"]
description = "High-precision BMW diagnostic daemon using FTDI D2XX direct control for Debian/Linux"
license = "MIT"

[dependencies]
# FTDI D2XX control (Linux)
libftd2xx = "0.32"

# Async runtime
tokio = { version = "1", features = ["full"] }

# WebSocket server
tokio-tungstenite = "0.21"
futures-util = "0.3"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1"
thiserror = "1"

# Time handling with high precision
chrono = "0.4"

[profile.release]
opt-level = 3
lto = true
strip = true

[[bin]]
name = "bmw-diag-daemon"
path = "src/main.rs"
