[package]
name = "bmw-diag"
version = "0.1.0"
description = "BMW diagnostic tool for K+DCAN FTDI cable"
authors = ["nofatnews"]
license = "MIT"
repository = ""
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "bmw_diag_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.9.5", features = [] }
tauri-plugin-log = "2"

# Serial communication
serialport = "4.7"
tokio = { version = "1", features = ["sync", "time"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"
